--- a/index.html
+++ b/index.html
@@ -48,37 +48,7 @@
     <!-- <header id="nav"></header> -->
     <!-- Navbar Start -->
     <!-- <div style="background-image: url('img/main_header.jpg'); z-index: 9999;"> -->
-    <div class="container-fluid bg-white sticky-top">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
-                <a href="index.html" style="width: 20vh; height: auto">
-                    <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
-                </a>
-                <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">소개</a>
-                        <a href="story.html" class="nav-item nav-link">스토리</a>
-                        <!-- <a href="store.html" class="nav-item nav-link">Store</a> -->
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">활동</a>
-                            <div class="dropdown-menu bg-light rounded-0 m-0">
-                                <a href="news.html" class="dropdown-item">선한마음소식</a>
-                                <a href="volunteer.html" class="dropdown-item">봉사활동</a>
-                                <a href="forum.html" class="dropdown-item">포럼&컨퍼런스</a>
-                                <a href="education.html" class="dropdown-item">교육&행사</a>
-                            </div>
-                        </div>
-                        <a href="contact.html" class="nav-item nav-link">문의하기</a>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </div>
+    <div id="nav"></div>
     <!-- Navbar End -->
 
 <!-- </div> -->
@@ -88,11 +58,11 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="img/main_header.jpg" alt="Image">
-                    <div class="carousel-caption" style="background-color: rgba(0, 0, 0, 0.53);">
-                        <div class="container">
+                    <div class="carousel-caption" style="background-color: rgba(0, 0, 0, 0.53); align-items: baseline;">
+                        <div class="container" style="margin-top: 8vw">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 text-center">
-                                    <p class="fs-4 text-white animated zoomIn">메인 이미지</p>
+                                    <!-- <p class="fs-4 text-white animated zoomIn">메인 이미지</p> -->
                                     <h1 class="display-1 text-white mb-4 animated zoomIn">사랑으로 품다, <br>선한마음연합</h1>
                                     <!-- <a href="" class="btn btn-light rounded-pill py-3 px-5 animated zoomIn">Explore More</a> -->
                                 </div>
@@ -180,7 +150,7 @@
 
     <!-- Video Start -->
             <div class="" style="position:relative; width: 100%; height: 0; padding-top: 56%;">
-                <iframe style="position:absolute; top: 0; left: 0; width: 100%; height:100%;" allow="accelerometer; autoplay;" src="https://www.youtube.com/embed/4_8Os_C5naI?autoplay=1"></iframe>
+                <iframe style="position:absolute; top: 0; left: 0; width: 100%; height:100%;" allow="accelerometer; autoplay;" src="https://www.youtube.com/embed/4_8Os_C5naI?autoplay=0"></iframe>
             </div>
 
     <!-- Video End -->
