--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,8 @@
 <div class="container-fluid bg-white sticky-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
-            <a href="index.html" class="navbar-brand">
-                <img class="img-fluid" src="img/logo_vertical.png" alt="Logo">
+            <a href="index.html" style="width: 250px; height: auto">
+                <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
             </a>
             <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -12,21 +12,19 @@
                 <div class="navbar-nav ms-auto">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">소개</a>
-                    <a href="product.html" class="nav-item nav-link">스토리</a>
-                    <!-- <a href="store.html" class="nav-item nav-link">Store</a> -->
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">활동</a>
+                        <!-- data-bs-toggle="dropdown" 삭제 -->
+                        <a href="story.html" class="nav-link dropdown-toggle" >활동</a>
                         <div class="dropdown-menu bg-light rounded-0 m-0">
-                            <a href="feature.html" class="dropdown-item">Features</a>
-                            <a href="blog.html" class="dropdown-item">Blog Article</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="404.html" class="dropdown-item">404 Page</a>
+                            <a href="news.html" class="dropdown-item">선한마음소식</a>
+                            <a href="volunteer.html" class="dropdown-item">봉사활동</a>
+                            <a href="forum.html" class="dropdown-item">포럼&컨퍼런스</a>
+                            <a href="education.html" class="dropdown-item">교육&행사</a>
                         </div>
                     </div>
+                    <a href="newsletter.html" class="nav-item nav-link">뉴스레터</a>
+                    <!-- <a href="store.html" class="nav-item nav-link">Store</a> -->
                     <a href="contact.html" class="nav-item nav-link">문의하기</a>
-                </div>
-                <div class="border-start ps-4 d-none d-lg-block">
-                    <button type="button" class="btn btn-sm p-0"><i class="fa fa-search"></i></button>
                 </div>
             </div>
         </nav>
