--- a/volunteer.html
+++ b/volunteer.html
@@ -57,10 +57,9 @@
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">소개</a>
-                        <a href="story.html" class="nav-item nav-link">스토리</a>
-                        <!-- <a href="store.html" class="nav-item nav-link">Store</a> -->
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">활동</a>
+                            <!-- data-bs-toggle="dropdown" 삭제 -->
+                            <a href="story.html" class="nav-link dropdown-toggle active" >활동</a>
                             <div class="dropdown-menu bg-light rounded-0 m-0">
                                 <a href="news.html" class="dropdown-item">선한마음소식</a>
                                 <a href="volunteer.html" class="dropdown-item">봉사활동</a>
@@ -68,10 +67,9 @@
                                 <a href="education.html" class="dropdown-item">교육&행사</a>
                             </div>
                         </div>
+                        <a href="newsletter.html" class="nav-item nav-link">뉴스레터</a>
+                        <!-- <a href="store.html" class="nav-item nav-link">Store</a> -->
                         <a href="contact.html" class="nav-item nav-link">문의하기</a>
-                    </div>
-                    <div class="border-start ps-4 d-none d-lg-block">
-                        <button type="button" class="btn btn-sm p-0"><i class="fa fa-search"></i></button>
                     </div>
                 </div>
             </nav>
