--- a/index.html
+++ b/index.html
@@ -48,7 +48,38 @@
     <!-- <header id="nav"></header> -->
     <!-- Navbar Start -->
     <!-- <div style="background-image: url('img/main_header.jpg'); z-index: 9999;"> -->
-    <div id="nav"></div>
+        <div class="container-fluid bg-white sticky-top">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
+                    <a href="index.html" style="width: 250px; height: auto">
+                        <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
+                    </a>
+                    <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
+                        data-bs-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <div class="navbar-nav ms-auto">
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="about.html" class="nav-item nav-link">소개</a>
+                            <div class="nav-item dropdown">
+                                <!-- data-bs-toggle="dropdown" 삭제 -->
+                                <a href="story.html" class="nav-link dropdown-toggle" >활동</a>
+                                <div class="dropdown-menu bg-light rounded-0 m-0">
+                                    <a href="news.html" class="dropdown-item">선한마음소식</a>
+                                    <a href="volunteer.html" class="dropdown-item">봉사활동</a>
+                                    <a href="forum.html" class="dropdown-item">포럼&컨퍼런스</a>
+                                    <a href="education.html" class="dropdown-item">교육&행사</a>
+                                </div>
+                            </div>
+                            <a href="newsletter.html" class="nav-item nav-link">뉴스레터</a>
+                            <!-- <a href="store.html" class="nav-item nav-link">Store</a> -->
+                            <a href="contact.html" class="nav-item nav-link">문의하기</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
     <!-- Navbar End -->
 
 <!-- </div> -->
