--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo_original.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,16 +62,7 @@
                         <div class="navbar-nav ms-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">소개</a>
-                            <div class="nav-item dropdown">
-                                <!-- data-bs-toggle="dropdown" 삭제 -->
-                                <a href="story.html" class="nav-link dropdown-toggle" >활동</a>
-                                <div class="dropdown-menu bg-light rounded-0 m-0">
-                                    <a href="news.html" class="dropdown-item">선한마음소식</a>
-                                    <a href="volunteer.html" class="dropdown-item">봉사활동</a>
-                                    <a href="forum.html" class="dropdown-item">포럼&컨퍼런스</a>
-                                    <a href="education.html" class="dropdown-item">교육&행사</a>
-                                </div>
-                            </div>
+                            <a href="story.html" class="nav-item nav-link">활동</a>
                             <a href="newsletter.html" class="nav-item nav-link">뉴스레터</a>
                             <!-- <a href="store.html" class="nav-item nav-link">Store</a> -->
                             <a href="contact.html" class="nav-item nav-link">문의하기</a>
@@ -209,7 +200,7 @@
                 </a>
             </div>
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" >
-                <a href="news.html" class="btn" style="width: auto; margin: 5% 0 0 0; border: 1px solid black; font-weight: bold;">more story</a>
+                <a href="story.html" class="btn" style="width: auto; margin: 5% 0 0 0; border: 1px solid black; font-weight: bold;">more story</a>
             </div>
         </div>
     </div>
