--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tea House - Tea Shop Website Template</title>
+    <title>선한마음연합</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo_original.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,16 +60,7 @@
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">소개</a>
-                        <div class="nav-item dropdown">
-                            <!-- data-bs-toggle="dropdown" 삭제 -->
-                            <a href="story.html" class="nav-link dropdown-toggle" >활동</a>
-                            <div class="dropdown-menu bg-light rounded-0 m-0">
-                                <a href="news.html" class="dropdown-item">선한마음소식</a>
-                                <a href="volunteer.html" class="dropdown-item">봉사활동</a>
-                                <a href="forum.html" class="dropdown-item">포럼&컨퍼런스</a>
-                                <a href="education.html" class="dropdown-item">교육&행사</a>
-                            </div>
-                        </div>
+                        <a href="story.html" class="nav-item nav-link">활동</a>
                         <a href="newsletter.html" class="nav-item nav-link">뉴스레터</a>
                         <!-- <a href="store.html" class="nav-item nav-link">Store</a> -->
                         <a href="contact.html" class="nav-item nav-link active">문의하기</a>
@@ -84,14 +75,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-2 text-dark mb-4 animated slideInDown">Contact Us</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-dark" aria-current="page">Contact</li>
-                </ol>
-            </nav>
+            <h1 class="display-2 text-white mb-4 animated slideInDown">문의하기</h1>
         </div>
     </div>
     <!-- Page Header End -->
@@ -101,80 +85,76 @@
     <div class="container-xxl contact py-5">
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium fst-italic text-primary">Contact Us</p>
-                <h1 class="display-6">If You Have Any Query, Please Contact Us</h1>
+                <p class="fs-5 fw-medium fst-italic text-primary">Goodheart Contact</p>
+                <h1 class="display-6">선한마음 연락처</h1>
             </div>
             <div class="row g-5 mb-5">
                 <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.3s">
                     <div class="btn-square mx-auto mb-3">
                         <i class="fa fa-envelope fa-2x text-white"></i>
                     </div>
-                    <p class="mb-2">info@example.com</p>
-                    <p class="mb-0">support@example.com</p>
+                    <p class="mb-2">goodheart.manager@gmail.com</p>
                 </div>
                 <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
                     <div class="btn-square mx-auto mb-3">
                         <i class="fa fa-phone fa-2x text-white"></i>
                     </div>
-                    <p class="mb-2">+012 345 67890</p>
-                    <p class="mb-0">+012 345 67890</p>
+                    <p class="mb-2">+82 (0)2-715-5610</p>
                 </div>
                 <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.5s">
                     <div class="btn-square mx-auto mb-3">
                         <i class="fa fa-map-marker-alt fa-2x text-white"></i>
                     </div>
-                    <p class="mb-2">123 Street</p>
-                    <p class="mb-0">New York, USA</p>
+                    <p class="mb-2">서울특별시 마포구</p>
+                    <p class="mb-2">토정로37길 46</p>
+                    <p class="mb-0">정우멘션 202호</p>
                 </div>
             </div>
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h3 class="mb-4">Need a functional contact form?</h3>
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form
-                        with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're
-                        done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <h3 class="mb-4">선한마음연합에 대해 관심이 있으신가요?</h3>
+                    <p class="mb-4">아래 문의를 통해 이름, 이메일, 제목, 내용을 작성하여 주시면<br> 빠른 시일 내 선한마음연합에서 답변 드리겠습니다.</p>
                     <form id="emailForm" class="gform" method="POST" data-email="ggoso97@gmail.com"
                         action="https://script.google.com/macros/s/AKfycbzE_NZUoOEMPRTfHYnNwTYedTGWaDiwXIG-KZoZyWY--zGAAl7eyjWehFgZwEFXgdY5/exec">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="senderName" name="senderName" placeholder="Your Name">
-                                    <label for="name">Your Name</label>
+                                    <input type="text" class="form-control" id="senderName" name="senderName" placeholder="이름">
+                                    <label for="name">이름</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" id="senderEmail" name="senderEmail" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
+                                    <input type="email" class="form-control" id="senderEmail" name="senderEmail" placeholder="이메일">
+                                    <label for="email">이메일</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
+                                    <input type="text" class="form-control" id="subject" name="subject" placeholder="제목">
+                                    <label for="subject">제목</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" name="message"
+                                    <textarea class="form-control" placeholder="문의 하실 내용을 적어주세요." id="message" name="message"
                                         style="height: 120px"></textarea>
-                                    <label for="message">Message</label>
+                                    <label for="message">문의 내용</label>
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary rounded-pill py-3 px-5" id="btnSubmit">Send
-                                    Message</button>
+                                <button class="btn btn-primary rounded-pill py-3 px-5" id="btnSubmit" style="margin-bottom: 30px;">문의하기</button>
                             </div>
                         </div>
-                        <div style="display:none" class="thankyou_message">                        
-                            <h2><em>감사합니다!</em> 곧 선한마음연합에서 연락을 드릴겁니다 &#58;&#41;</h2>                     
+                        <div style="display:none;" class="thankyou_message">                        
+                            <h2><em>감사합니다!</em><br> 곧 선한마음연합에서 연락 드리겠습니다. &#58;&#41;</h2>                     
                         </div>
                     </form>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
                         <iframe class="w-100 rounded"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d521.1195424936941!2d126.9470232231124!3d37.54241463834184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c98a5b7e90821%3A0x3f6fe68312103553!2z7KCV7Jqw7IOB6rCA!5e0!3m2!1sko!2skr!4v1718430659918!5m2!1sko!2skr"
                             frameborder="0" style="height: 100%; min-height: 300px; border:0;" allowfullscreen=""
                             aria-hidden="false" tabindex="0"></iframe>
                     </div>
