--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 </head>
 <style>
     .owl-item {
-        border: 5px solid black;
+        /* border: 5px solid black; */
         display: flex;
         justify-content: center;
     }
