--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    
+    <meta content="선한마음연합" name="og:title">
+    <meta content="goodheart-wu.github.io" name="og:url">
+    <meta content="선한마음연합은 아이들을 보호하고 아동 인권을 증진하여 전세계 모든 아이들이 행복한 사회를 만들기 위해 일하는 시민단체입니다." name="og:description">
+    <meta content="https://goodheart-wu.github.io/img/kakao_thumbnail.png" name="og:image">
 
     <!-- Favicon -->
     <link href="img/logo_original.png" rel="icon">
@@ -51,8 +56,11 @@
         <div class="container-fluid bg-white sticky-top">
             <div class="container">
                 <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
-                    <a href="index.html" style="width: 250px; height: auto">
+                    <!-- <a href="index.html" style="width: 250px; height: auto">
                         <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
+                    </a> -->
+                    <a href="index.html" class="navbar-brand" style="margin-top: 15px;">
+                        <img class="img-fluid" src="img/logo_original.png" alt="Logo" style="max-width: 60%;">
                     </a>
                     <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse">
