--- a/volunteer.html
+++ b/volunteer.html
@@ -98,14 +98,13 @@
         <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;"></div>
     </div>
     <!-- Spinner End -->
-
     
     <!-- Navbar Start -->
     <div class="container-fluid bg-white sticky-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
-                <a href="index.html" class="navbar-brand">
-                    <img class="img-fluid" src="img/logo_vertical.png" alt="Logo">
+                <a href="index.html" class="navbar-brand" style="margin-top: 15px;">
+                    <img class="img-fluid" src="img/logo_original.png" alt="Logo" style="max-width: 60%;">
                 </a>
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
