main_header_change

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div id="header-carousel" class="carousel carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/main_header.jpg" alt="Image">
+                    <img class="w-100" src="img/main_header1.png" alt="Image">
                     <div class="carousel-caption" style="background-color: rgba(0, 0, 0, 0.53); align-items: baseline;">
                         <div class="container" style="margin-top: 8vw">
                             <div class="row justify-content-center">
