--- a/footer.html
+++ b/footer.html
@@ -13,13 +13,16 @@
                 </div>
                 <div class="col-lg-2 col-md-6">
                     
-                    <p><a style="color:#262626;" href="">소개</a></p>
-                    <p><a style="color:#262626;" href="">스토리</a></p>
-                    <a style="color:#262626;" href="">문의하기</a>
+                    <p><a style="color:#262626;" href="about.html">소개</a></p>
+                    <p><a style="color:#262626;" href="story.html">활동</a></p>
+                    <p><a style="color:#262626;" href="newsletter.html">뉴스레터</a></p>
+                    <p><a style="color:#262626;" href="contact.html">문의하기</a></p>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <p><a style="color:#262626;" href="">이용약관</a></p>
-                    <p><a style="color:#262626;" href="">개인정보처리방침</a></p>
+                    <!-- <p><a style="color:#262626;" href="">이용약관</a></p> -->
+                    <!-- <p><a style="color:#262626;" href="">개인정보처리방침</a></p> -->
+                    <p style="color:#262626;">이용약관</p>
+                    <p style="color:#262626;">개인정보처리방침</p>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <div class="d-flex pt-3" style="margin-bottom: 30px;">
