--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
     
-    <meta content="선한마음연합" name="og:title">
-    <meta content="goodheart-wu.github.io" name="og:url">
-    <meta content="선한마음연합은 아이들을 보호하고 아동 인권을 증진하여 전세계 모든 아이들이 행복한 사회를 만들기 위해 일하는 시민단체입니다." name="og:description">
-    <meta content="https://goodheart-wu.github.io/img/kakao_thumbnail.png" name="og:image">
+    <meta property="og:title" content="선한마음연합">
+    <meta property="og:url" content="goodheart-wu.github.io">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="선한마음연합은 아이들을 보호하고 아동 인권을 증진하여 전세계 모든 아이들이 행복한 사회를 만들기 위해 일하는 시민단체입니다.">
+    <meta property="og:image" content="https://goodheart-wu.github.io/img/kakao_thumbnail.png">
 
     <!-- Favicon -->
     <link href="img/logo_original.png" rel="icon">
