--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
                         <div class="container" style="margin-top: 8vw">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 text-center">
-                                    <!-- <p class="fs-4 text-white animated zoomIn">메인 이미지</p> -->
-                                    <h1 class="display-1 text-white mb-4 animated zoomIn">사랑으로 품다, <br>선한마음연합</h1>
-                                    <!-- <a href="" class="btn btn-light rounded-pill py-3 px-5 animated zoomIn">Explore More</a> -->
+                                    <p class="fs-2 text-white animated">사랑으로 품다</p>
+                                    <h1 class="display-1 text-white mb-4 animated zoomIn">선한마음연합</h1>
+                                    <p class="fs-5 text-white animated">선한마음연합은 아이들을 보호하고 아동 인권을 증진하여 전세계 모든 아이들이 행복한 사회를 만들기 위해 일하는 시민단체입니다.</p>
+                                    <a href="https://forms.gle/MV5TuS8oMbS9qsBg9" target="_blank" class="btn btn-light rounded-pill py-3 px-5 animated zoomIn" style="margin-top: 30px">회원가입</a>
                                 </div>
                             </div>
                         </div>
