--- a/about.html
+++ b/about.html
@@ -175,11 +175,7 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="store-item position-relative text-center">
-                        <img class="img-fluid" src="img/onehada_mou.png" alt="" style="height: 30vh;">
-                        <div class="store-overlay">
-                            <button id="showDialogLink_onehada" class="btn btn-primary rounded-pill py-2 px-4 m-2">간단 소개
-                                <i class="fa fa-arrow-right ms-2"></i></button>
-                        </div>
+                        <a id="showDialogLink_onehada"><img class="img-fluid" src="img/onehada_mou.png" alt="" style="height: 30vh;"></a>
                     </div>
                 </div>
 
@@ -192,11 +188,7 @@
 
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="store-item position-relative text-center">
-                        <img class="img-fluid" src="img/baekjae_mou.png" alt="" style="height: 30vh;">
-                        <div class="store-overlay">
-                            <button id="showDialogLink_baekjae" class="btn btn-primary rounded-pill py-2 px-4 m-2">간단
-                                소개<i class="fa fa-arrow-right ms-2"></i></button>
-                        </div>
+                        <img class="img-fluid" id="showDialogLink_baekjae" src="img/baekjae_mou.png" alt="" style="height: 30vh;">
                     </div>
                 </div>
 
@@ -209,11 +201,7 @@
 
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="store-item position-relative text-center">
-                        <img class="img-fluid" src="img/social_mou.png" alt="" style="height: 30vh;">
-                        <div class="store-overlay">
-                            <button id="showDialogLink_social" class="btn btn-primary rounded-pill py-2 px-4 m-2">간단
-                                소개<i class="fa fa-arrow-right ms-2"></i></button>
-                        </div>
+                        <img class="img-fluid" id="showDialogLink_social" src="img/social_mou.png" alt="" style="height: 30vh;">
                     </div>
                 </div>
 
@@ -249,7 +237,7 @@
                         <a href="https://www.onehada.co.kr/" target="_blank" class="d-block rounded">
                             <img src="img/onehada_logo_full.png" alt="">
                         </a>
-                        <img src="img/ttanggang_logo.png" alt="">
+                        <img src="img/tthangang1_logo.png" alt="">
                         
             </div>
         </div>
