--- a/newsletter.html
+++ b/newsletter.html
@@ -142,14 +142,12 @@
                         </div>
 
                         <div class="col-lg-7">
-                            <p class="fs-5 fw-medium fst-italic text-primary">2024년 5월 뉴스레터</p>
+                            <p class="fs-5 fw-medium fst-italic text-primary">2024년 5월 뉴스레터&nbsp;<a href="https://stib.ee/m4gC" target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
                             <p class="mb-4">01  사랑으로 가득한 소망의 집 봉사활동🏡💚<br>
                                 02  베이비박스 아기 돌보기 봉사활동👶🍼<br>
                                 03  선덕원 5월의 공부<br>
                                 04 선덕원의 어린이날🎈</p>
-                            <a href="https://stib.ee/m4gC" target='_blank' class="btn btn-primary rounded-pill">상세
-                                보기</a>
                         </div>
                         <div class="col-lg-12" style="margin-bottom: 3.875rem"><br></div>
                         <!-- 202404 -->
