--- a/about.html
+++ b/about.html
@@ -115,10 +115,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid  py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container text-center py-5">
-            <!-- <h1 class="display-2 text-light mb-4 animated slideInDown">소개</h1> -->
-        </div>
+    <div class="container-fluid  py-5 wow fadeIn" data-wow-delay="0.1s">
     </div>
     <!-- Page Header End -->
 
@@ -127,17 +124,14 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
-                <h1 class="display-6">대표사</h1>
+                <h3 class="display-8">대표사</h3>
                 <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
                     <!-- <img class="img-fluid mb-3" src="img/KakaoTalk_20240403_194806696_01.jpg" alt=""> -->
                     <img class="img-fluid" src="img/KakaoTalk_20240403_194806696.jpg" alt="">
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <p class="mb-4">안녕하세요. <br>선한 마음 공동대표 이소연입니다. </p>
-
-
-
-                    <p class="mb-4">저희 선한마음연합은 종로에 위치한 보육시설 선덕원에 있는 아이들을 돕는 일을 하고 있습니다.<br>
+                    <p class="mb-4">안녕하세요. <br>선한 마음 공동대표 이소연입니다.<br>
+                        저희 선한마음연합은 종로에 위치한 보육시설 선덕원에 있는 아이들을 돕는 일을 하고 있습니다.<br>
                         아이들에게 주 1-2회 학습지도 및 정서 지원활동, 학습지원을 실천하고 있으며 음악회 등의 여러 행사 개최 등을 통해 아이들을 돕습니다.<br>
                         선덕원은 대부분 초등학생 이하의 여자아이들로 구성되어 있습니다.<br>
                         저희는 이 아이들이 사춘기를 거쳐 18세에 독립하게 될 때 정서적으로 안정되고 실력을 갖춘 청년으로 사회에 잘 적응하게 돕는 것을 목표로 하고 있습니다.<br>
@@ -149,9 +143,11 @@
                         그리고 그 밧줄을 통해 다시 일으켜 설 수 있게 하는 든든한 힘이 되어드리고 싶습니다. 항상 선한마음연합과 함께해 주신 모든 분께 감사드립니다.
                     </p>
                     <br>
+                </div>
+                    <div class="col-lg-11 wow fadeIn" data-wow-delay="0.2s" style="text-align: end; margin-top: 0;">
                     <strong style="font-size: 1.3rem;">(사)선한마음연합</strong><br>
                     <strong style="font-size: 1.3rem;">대표이사 이소연 </strong>
-                </div>
+                    </div>
             </div>
         </div>
     </div>
@@ -159,7 +155,7 @@
     <div class="py-5" style="background-color: #F2F2F2;">
         <div class="container">
             <div class="row g-5">
-                <strong style="font-size: 3.0rem; text-align: center;">조직도</strong>
+                <h3><strong style=" text-align: left;">조직도</strong></h3>
                 <img style="width: 80%; margin: 0 auto;" src="img/company.png" alt="">
             </div>
         </div>
@@ -175,41 +171,35 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="store-item position-relative text-center">
-                        <a id="showDialogLink_onehada"><img class="img-fluid" src="img/onehada_mou.png" alt="" style="height: 30vh;"></a>
-                    </div>
-                </div>
-
-                <!-- 다이얼로그를 담을 div -->
-                <div class="dialog-container" id="dialog_onehada">
-                    <strong>선한마음연합 X 원하다</strong>
+                        <img class="img-fluid" id="showDialogLink_baekjae" src="img/onehada_mou.png" alt="" style="height: 30vh; margin-bottom: 2vh;">
+                        <strong>선한마음연합 X 원하다</strong>
                     <p>"통일을 원하다 하나됨을 원하다" 통일 대한민국을 위해 전 세계 재외동포와 함께 통일을 준비하는 원하다와 함께 합니다.</p>
-                    <button id="closeDialogLink_onehada">닫기</button>
+                    </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="store-item position-relative text-center">
-                        <img class="img-fluid" id="showDialogLink_baekjae" src="img/baekjae_mou.png" alt="" style="height: 30vh;">
+                        <img class="img-fluid" id="showDialogLink_baekjae" src="img/baekjae_mou.png" alt="" style="height: 30vh; margin-bottom: 2vh;">
+                        <strong>선한마음연합 X 농업회사법인(주) 백제</strong><p>
+                            국내 쌀을 사용하여 쌀국수와 떡국, 면류 등을 생산하는 기술을 가진 국내 식품 기업으로 기부와 나눔의 활동을 삶의 가치로 삼고 이웃 섬김에 최선의 노력을 다하겠다는 뜻을 가진 농업회사법인(주) 백제와 함께 합니다.</p>
                     </div>
-                </div>
-
-                <!-- 다이얼로그를 담을 div -->
-                <div class="dialog-container" id="dialog_baekjae">
-                    <strong>선한마음연합 X 농업회사법인(주) 백제</strong><p>
-                        국내 쌀을 사용하여 쌀국수와 떡국, 면류 등을 생산하는 기술을 가진 국내 식품 기업으로 기부와 나눔의 활동을 삶의 가치로 삼고 이웃 섬김에 최선의 노력을 다하겠다는 뜻을 가진 농업회사법인(주) 백제와 함께 합니다.</p>
-                    <button id="closeDialogLink_baekjae">닫기</button>
                 </div>
 
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="store-item position-relative text-center">
-                        <img class="img-fluid" id="showDialogLink_social" src="img/social_mou.png" alt="" style="height: 30vh;">
+                        <img class="img-fluid" id="showDialogLink_social" src="img/social_mou.png" alt="" style="height: 30vh; margin-bottom: 2vh;">
+                        <strong>선한마음연합 X 대한민국 사회공헌재단</strong><p>
+                            취약계층 아동의 안정적인 생활가구 지원과 주거환경 개선 등을 위한 '주거안정 개선사업'을 통해 '사람중심, Small Change(작은 변화)를 통한 행복한 사회 실현'이라는 봉사 정신의 뜻을 알리는 대한민국 사회공헌재단과 함께합니다.</p>
                     </div>
                 </div>
 
-                <!-- 다이얼로그를 담을 div -->
-                <div class="dialog-container" id="dialog_social">
-                    <strong>선한마음연합 X 대한민국 사회공헌재단</strong><p>
-취약계층 아동의 안정적인 생활가구 지원과 주거환경 개선 등을 위한 '주거안정 개선사업'을 통해 '사람중심, Small Change(작은 변화)를 통한 행복한 사회 실현'이라는 봉사 정신의 뜻을 알리는 대한민국 사회공헌재단과 함께합니다.</p>
-                    <button id="closeDialogLink_social">닫기</button>
+
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="store-item position-relative text-center">
+                        <img class="img-fluid" id="showDialogLink_social" src="img/sindafum_mou.jpg" alt="" style="height: 30vh; margin-bottom: 2vh;">
+                        <strong>선한마음연합 X 충신다품</strong><p>
+                            사회적 소외계층(노인, 다문화, 저소득 가정 등)에 있는 이웃들에게 사랑과 진심을 나누는 충신다품과 함께 합니다.</p>
+                    </div>
                 </div>
 
             </div>
