--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     <!-- </div> -->
     <!-- Carousel Start -->
+     <!-- 내려오는 네비 -->
     <div class="container-fluid sticky-top" id="hide_nav"
         style="display: none; background-image: linear-gradient(rgba(0, 0, 0, 0.53), rgba(0, 0, 0, 0.53)), url('img/main_header.jpg'); background-size: cover; backdrop-filter: blur(30px);">
         <div class="container">
@@ -68,10 +69,10 @@
                     <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
                 </a> -->
                 <!-- <a href="index.html" class="navbar-brand" style="margin-top: 15px;"> -->
-                <img src="img/logo_white.png" alt="Logo" style="max-width: 60%; height: 8vh;">
+                        <img class="img-fluid" src="img/logo_white.png" alt="Logo" style="width: 5vh;">
                 <!-- </a> -->
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse">
+                    data-bs-target="#navbarCollapse" style="background-color: rgba(0, 0, 0, 0.10);">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -94,6 +95,7 @@
             <!-- <div style="background-image: url('img/main_header.jpg'); z-index: 9999;"> -->
 
             <!-- Navbar End -->
+             <!-- 고정 네비 -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="img/main_header.jpg" alt="Image" style="height: 100vh; object-fit: cover;">
@@ -106,10 +108,10 @@
                                         <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
                                     </a> -->
                                     <!-- <a href="index.html" class="navbar-brand" style="margin-top: 15px;"> -->
-                                    <img src="img/logo_white.png" alt="Logo" style="max-width: 60%; height: 8vh;">
+                                        <img class="img-fluid" src="img/logo_white.png" alt="Logo" style="width: 5vh;">
                                     <!-- </a> -->
                                     <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                                        data-bs-target="#navbarCollapse">
+                                        data-bs-target="#navbarCollapse" style="background-color: rgba(0, 0, 0, 0.20);">
                                         <span class="navbar-toggler-icon"></span>
                                     </button>
                                     <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -235,7 +237,7 @@
     <!-- Video Start -->
     <div class="" style="position:relative; width: 100%; height: 0; padding-top: 56%;">
         <iframe style="position:absolute; top: 0; left: 0; width: 100%; height:100%;" allow="accelerometer; autoplay;"
-            src="https://www.youtube.com/embed/4_8Os_C5naI?autoplay=1"></iframe>
+            src="https://www.youtube.com/embed/4_8Os_C5naI?autoplay=0"></iframe>
     </div>
 
     <!-- Video End -->
