--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
     <!-- Video Start -->
     <div class="" style="position:relative; width: 100%; height: 0; padding-top: 56%;">
         <iframe style="position:absolute; top: 0; left: 0; width: 100%; height:100%;" allow="accelerometer; autoplay;"
-            src="https://www.youtube.com/embed/4_8Os_C5naI?autoplay=1"></iframe>
+            src="https://www.youtube.com/embed/4_8Os_C5naI?autoplay=0"></iframe>
     </div>
 
     <!-- Video End -->
 
 
-    <div class="container-xxl py-5" style="background-color: #F2F2F2 ; max-width: 1800px !important;">
+    <div class="container-xxl py-5" style="background-color: #F2F2F2 ; max-width: 1800px !important; padding-top: 7rem !important;">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-3 wow fadeIn" data-wow-delay="0.1s">
@@ -256,8 +256,9 @@
                     </h1>
                     <!-- <img class="img-fluid mb-3" src="img/KakaoTalk_20240403_194806696_01.jpg" alt=""> -->
                 </div>
+                <div class="col-lg-1"></div>
                 <!-- 1번 뉴스레터 -->
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-right: 10px;">
+                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-right: 10px;">
                     <p class="fs-5 fw-medium fst-italic text-primary">2024년 5월 뉴스레터&nbsp;<a href="https://stib.ee/m4gC"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
                     <p class="mb-4">푸르른 나무와 따뜻한 햇살이 반기는 가정의 달 5월입니다. 가족, 친구, 스승 또 우리 이웃과 함께한 5월이었습니다👨‍👩‍👧‍👧 선한마음연합에도
@@ -272,7 +273,7 @@
                         둘, 특별후원금 소식💌</p>
                 </div>
                 <!-- 2번 뉴스레터 -->
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem;">
+                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem;">
                     <p class="fs-5 fw-medium fst-italic text-primary">2024년 4월 뉴스레터&nbsp;<a href="https://stib.ee/lpDC"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
@@ -284,9 +285,9 @@
 
                 </div>
                 <!-- 공백 -->
-                <div class="col-lg-3"></div>
+                <div class="col-lg-4"></div>
                 <!-- 3번 뉴스레터 -->
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px; margin-right: 10px;">
+                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px; margin-right: 10px;">
                     <p class="fs-5 fw-medium fst-italic text-primary">2024년 3월 뉴스레터&nbsp;<a href="https://stib.ee/eKzB"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
@@ -301,7 +302,7 @@
                         둘, 특별후원금 소식💌</p>
                 </div>
                 <!-- 4번 뉴스레터 -->
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px;">
+                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px;">
                     <p class="fs-5 fw-medium fst-italic text-primary">2024년 2월 뉴스레터&nbsp;<a href="https://stib.ee/cKzB"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
@@ -322,8 +323,8 @@
 
                 </div>
                                 <!-- 공백 -->
-                                <div class="col-lg-3"></div>
-                <div class="col-lg-8" style="text-align: center;"><p><a href="newsletter.html" style="text-decoration: underline; text-underline-position : under;"><I><h4>지난 뉴스레터 전체보기</h4></I></a></p></div>
+                                <!-- <div class="col-lg-3"></div> -->
+                <div class="col-lg-12" style="text-align: center;"><p><a href="newsletter.html" style="text-decoration: underline; text-underline-position : under;"><I><h4>지난 뉴스레터 전체보기</h4></I></a></p></div>
             </div>
         </div>
     </div>
