--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
     <!-- Footer Start -->
-    <div class="container-fluid bg-light footer mt-5 py-5 wow fadeIn" style="background-color: #F0E8EC !important; color:#262626;" data-wow-delay="0.1s">
+    <div class="container-fluid bg-light footer py-5 wow fadeIn" style="background-color: #F0E8EC !important; color:#262626;" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5" style="margin-left: auto; margin-right: auto;">
                 <div class="col-lg-6 col-md-6">
