--- a/about.html
+++ b/about.html
@@ -91,8 +91,8 @@
     <div class="container-fluid bg-white sticky-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
-                <a href="index.html" class="navbar-brand" style="margin-top: 15px;">
-                    <img class="img-fluid" src="img/logo_original.png" alt="Logo" style="max-width: 60%;">
+                <a href="index.html">
+                    <img class="img-fluid" src="img/logo_original.png" alt="Logo" style="max-width: 8vh;">
                 </a>
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -152,7 +152,7 @@
         </div>
     </div>
     <!-- About End -->
-    <div class="py-5" style="background-color: #F2F2F2;">
+    <div class="py-5" style="background-color: #F2F2F2; padding-bottom: 0px !important;">
         <div class="container">
             <div class="row g-5">
                 <h3><strong style=" text-align: left;">조직도</strong></h3>
@@ -164,11 +164,8 @@
     <!-- MOU -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s"
-                style="max-width: 500px; margin-bottom: 50px;">
-                <h1 class="display-6">MOU</h1>
-            </div>
             <div class="row g-4">
+                <h3 style="margin-bottom: var(--bs-gutter-y);"><strong style=" text-align: left;">MOU</strong></h3>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="store-item position-relative text-center">
                         <img class="img-fluid" id="showDialogLink_baekjae" src="img/onehada_mou.png" alt="" style="height: 30vh; margin-bottom: 2vh;">
@@ -214,25 +211,9 @@
     <!-- 함꼐 하는 단체들 -->
     <div class="container-fluid py-5">
         <div class="container py-5">
-            <div class="text-center mx-auto wow fadeInUp mb-5" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="display-6">함께 하는 단체들</h1>
-            </div>
-            <div class="owl-carousel product-carousel wow fadeInUp" data-wow-delay="0.3s"
-                style="width: 80%; height: auto; margin: auto">
-                <!-- <a href="" class="d-block rounded"> -->
-                    <img src="img/eda_community_logo.png" alt="">
-                    <!-- </a> -->
-                        <!-- <a href="" class="d-block rounded"> -->
-                            <!-- <img src="img/ttanggang_logo.png" alt=""> -->
-                        <!-- </a> -->
-                        <!-- <a href="" class="d-block rounded"> -->
-                            <img src="img/hana_logo.png" alt="">
-                        <!-- </a> -->
-                        <a href="https://www.onehada.co.kr/" target="_blank" class="d-block rounded">
-                            <img src="img/onehada_logo_full.png" alt="">
-                        </a>
-                        <img src="img/tthangang1_logo.png" alt="">
-                        
+            <div class="row g-5">
+                <h3><strong style=" text-align: left;">함께 하는 단체들</strong></h3>
+                <img style="width: 80%; margin: 0 auto;" src="img/withcompany.png" alt="">
             </div>
         </div>
     </div>
