--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
     <div class="container-fluid bg-white sticky-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
-                <a href="index.html" class="navbar-brand" style="margin-top: 15px;">
-                    <img class="img-fluid" src="img/logo_original.png" alt="Logo" style="max-width: 60%;">
+                <a href="index.html">
+                    <img class="img-fluid" src="img/logo_original.png" alt="Logo" style="max-width: 8vh;">
                 </a>
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
