--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <style>
     body {
-        background-color: #F2EBEB;
+        background-color: #ffffff;
     }
 </style>
 
@@ -68,9 +68,9 @@
                 <!-- <a href="index.html" style="width: 250px; height: auto">
                     <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
                 </a> -->
-                <!-- <a href="index.html" class="navbar-brand" style="margin-top: 15px;"> -->
+                <a href="index.html" >
                         <img class="img-fluid" id="menu-logo" src="img/logo_white.png" alt="Logo" style="width: 8vh;">
-                <!-- </a> -->
+                </a>
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse" style="background-image: url('img/hambuger.png'); height: 3vh; background-size: cover;">
                     <span style=""></span>
@@ -89,7 +89,7 @@
         </div>
     </div>
 
-    <div class="container-fluid px-0 mb-5">
+    <div class="container-fluid px-0">
         <div id="header-carousel" class="carousel carousel-fade" data-bs-ride="carousel">
             <!-- Navbar Start -->
             <!-- <div style="background-image: url('img/main_header.jpg'); z-index: 9999;"> -->
@@ -108,7 +108,7 @@
                                         <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
                                     </a> -->
                                     <!-- <a href="index.html" class="navbar-brand" style="margin-top: 15px;"> -->
-                                        <img class="img-fluid" id="menu-logo" src="img/logo_white.png" alt="Logo" style="width: 8vh;">
+                                        <a href="index.html"><img class="img-fluid" id="menu-logo" src="img/logo_white.png" alt="Logo" style="width: 8vh;"></a>
                                     <!-- </a> -->
                                     <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                                         data-bs-target="#navbarCollapse" style="background-image: url('img/hambuger.png'); height: 3vh; background-size: cover;">
@@ -133,10 +133,10 @@
                         <div class="container" style="margin-top: 8vw">
                             <div class="row justify-content-center" style="justify-content: flex-start !important;">
                                 <div class="col-lg-8 text-start">
-                                    <p class="fs-2 text-white animated">사랑으로 품다</p>
-                                    <h1 class="display-1 text-white mb-4 animated zoomIn">선한마음연합</h1>
+                                    <p class="fs-3 text-white animated">사랑으로 품다</p>
+                                    <h1 class="display-3 text-white mb-4 animated zoomIn">선한마음연합</h1>
                                     <p style="margin-bottom: 30px;" class="fs-5 text-white animated">선한마음연합은 아이들을 보호하고
-                                        아동 인권을 증진하여 전세계 모든 아이들이 행복한 사회를<br> 만들기 위해 일하는 시민단체입니다.</p>
+                                        아동 인권을 증진하여 전세계 모든 아이들이 행복한 사회를 만들기 위해 일하는 시민단체입니다.</p>
                                     <a><a href="https://forms.gle/MV5TuS8oMbS9qsBg9" class="fs-5" target="_blank"
                                             style="margin-top: 30px; color: white; text-decoration: underline; text-underline-position : under;">회원가입</a>
                                 </div>
@@ -163,7 +163,7 @@
     <!-- 선한마음 소개글 -->
 
 
-    <div class="py-5" style="background-color: #F2EBEB; padding-bottom: 6rem !important;">
+    <div class="py-5" style="background-color: #F2EBEB; padding-top: 6rem !important; padding-bottom: 6rem !important;">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6">
@@ -179,7 +179,7 @@
                         볼 때,
                         가슴 깊은 곳에서 올라오는 뜨거움을 느껴보았을 것입니다.
                         아이들의 아픔에 공감하는 이들, 작은 위로와 도움을 건네고자 하는 이들이 모여
-                        선한마음연합이 만들어졌습니다.<br>
+                        선한마음연합이 만들어졌습니다.
 
                         교육과 보살핌의 사각지대에 놓인 아이들을 보호하고 올바른 방식으로 교육하며
                         자립할 수 있도록 도와주고, 아이들이 세상 안에서 힘이 들 때 언제나 함께 하는
@@ -243,11 +243,11 @@
     <!-- Video End -->
 
 
-    <div class="container-xxl py-5" style="background-color: #F2F2F2 ; max-width: 1800px !important; padding-top: 7rem !important;">
+    <div class="container-xxl py-5" style="background-color: #F2F2F2 ; max-width: 1800px !important; padding-top: 7rem !important; padding-bottom: 7rem !important;">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.1s">
-                    <h1 style="text-decoration: underline; text-underline-position : under; line-height: 8vh;">
+                <div class="col-lg-2 wow fadeIn" data-wow-delay="0.1s" style="margin-right: 2rem;">
+                    <h1 class="home_newsletter_h1" style="text-decoration: underline; text-underline-position : under; line-height: 130%;">
                         <strong><I>
                                 NEWS<br>
                                 LETTER,
@@ -258,65 +258,65 @@
                 </div>
                 <div class="col-lg-1"></div>
                 <!-- 1번 뉴스레터 -->
-                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-right: 10px;">
-                    <p class="fs-5 fw-medium fst-italic text-primary">2024년 5월 뉴스레터&nbsp;<a href="https://stib.ee/m4gC"
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-right: 10px; margin-top: 30vh;">
+                    <p class="fs-5 fw-medium fst-italic ">2024년 5월 뉴스레터&nbsp;<a href="https://stib.ee/m4gC"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
-                    <p class="mb-4">푸르른 나무와 따뜻한 햇살이 반기는 가정의 달 5월입니다. 가족, 친구, 스승 또 우리 이웃과 함께한 5월이었습니다👨‍👩‍👧‍👧 선한마음연합에도
+                    <p class="mb-4">푸르른 나무와 따뜻한 햇살이 반기는 가정의 달 5월입니다. 가족, 친구, 스승 또 우리 이웃과 함께한 5월이었습니다 선한마음연합에도
                         따뜻한 마음과 손길들이 오갔는데요! 이웃과 함께하는 것은 언제나 즐겁습니다. 그럼 이번 달 소식 함께 하실까요~?!</p>
-                    <p class="mb-4">01 사랑으로 가득한 소망의 집 봉사활동🏡💚<br>
-                        02 베이비박스 아기 돌보기 봉사활동👶🍼<br>
+                    <p class="mb-4">01 사랑으로 가득한 소망의 집 봉사활동<br>
+                        02 베이비박스 아기 돌보기 봉사활동<br>
                         03 선덕원 5월의 공부<br>
-                        04 선덕원의 어린이날🎈</p>
+                        04 선덕원의 어린이날</p>
 
                     <p class="mb-4">- 선한마음연합 후원소식 -<br>
                         하나, 이웃에게 전하는 마음 "김정문 설렁탕"<br>
-                        둘, 특별후원금 소식💌</p>
+                        둘, 특별후원금 소식</p>
                 </div>
                 <!-- 2번 뉴스레터 -->
-                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem;">
-                    <p class="fs-5 fw-medium fst-italic text-primary">2024년 4월 뉴스레터&nbsp;<a href="https://stib.ee/lpDC"
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 30vh;">
+                    <p class="fs-5 fw-medium fst-italic ">2024년 4월 뉴스레터&nbsp;<a href="https://stib.ee/lpDC"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
-                    <p class="mb-4">🌸분홍빛의 벚꽃이 흩날리고 푸른빛의 나뭇잎☘️이 반기는 4월입니다! 풍성한 꽃잎처럼 아름다운 우리 이웃들의 소식을 함께 보실까요?</p>
+                    <p class="mb-4">분홍빛의 벚꽃이 흩날리고 푸른빛의 나뭇잎이 반기는 4월입니다! 풍성한 꽃잎처럼 아름다운 우리 이웃들의 소식을 함께 보실까요?</p>
 
-                    <p class="mb-4">01 베이비박스 아기돌봄 봉사👶🍼<br>
-                        02 선한마음 X 에다러브 소망의집 봉사🌸❤️<br>
+                    <p class="mb-4">01 베이비박스 아기돌봄 봉사<br>
+                        02 선한마음 X 에다러브 소망의집 봉사<br>
                         03 선덕원 공부와 활동</p>
 
                 </div>
                 <!-- 공백 -->
-                <div class="col-lg-4"></div>
+                <div class="col-lg-3" style="margin-right: 2rem;"></div>
                 <!-- 3번 뉴스레터 -->
-                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px; margin-right: 10px;">
-                    <p class="fs-5 fw-medium fst-italic text-primary">2024년 3월 뉴스레터&nbsp;<a href="https://stib.ee/eKzB"
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px; margin-right: 10px;">
+                    <p class="fs-5 fw-medium fst-italic ">2024년 3월 뉴스레터&nbsp;<a href="https://stib.ee/eKzB"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
-                    <p class="mb-4">🌷봄과 함께 선한마음연합의 9번째 뉴스레터가 도착했습니다!🌷 살랑살랑 봄바람에 설레는 마음인데요! 그 마음이 지속되도록 우리 이웃들의 설레는 소식 함께하실까요~?</p>
+                    <p class="mb-4">봄과 함께 선한마음연합의 9번째 뉴스레터가 도착했습니다! 살랑살랑 봄바람에 설레는 마음인데요! 그 마음이 지속되도록 우리 이웃들의 설레는 소식 함께하실까요~?</p>
 
-                    <p class="mb-4">01 베이비박스 아기돌봄 봉사👶🍼<br>
-                        02 다품 곁부축이팀과 함께 쪽방촌에 전하는 사랑🤝<br>
+                    <p class="mb-4">01 베이비박스 아기돌봄 봉사<br>
+                        02 다품 곁부축이팀과 함께 쪽방촌에 전하는 사랑<br>
                         03 선덕원 공부와 활동</p>
 
                     <p class="mb-4">- 선한마음연합 후원소식 -<br>
                         하나, 농업회사법인 (주)백제 & 김정문 설렁탕 후원소식<br>
-                        둘, 특별후원금 소식💌</p>
+                        둘, 특별후원금 소식</p>
                 </div>
                 <!-- 4번 뉴스레터 -->
-                <div class="col-lg-3 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px;">
-                    <p class="fs-5 fw-medium fst-italic text-primary">2024년 2월 뉴스레터&nbsp;<a href="https://stib.ee/cKzB"
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px;">
+                    <p class="fs-5 fw-medium fst-italic ">2024년 2월 뉴스레터&nbsp;<a href="https://stib.ee/cKzB"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
-                    <p class="mb-4">안녕하세요! 선한마음연합의 8번째 뉴스레터가 도착했습니다. 여러분의 이웃을 향한 지속적인 사랑에 늘 감사드립니다. 그럼 기다리시던 선한마음의 소식 보러 가실까요? 👉🏻</p>
+                    <p class="mb-4">안녕하세요! 선한마음연합의 8번째 뉴스레터가 도착했습니다. 여러분의 이웃을 향한 지속적인 사랑에 늘 감사드립니다. 그럼 기다리시던 선한마음의 소식 보러 가실까요? </p>
 
                     <p class="mb-4">01 선한마음연합X에다러브 소망의 집 봉사<br>
                         02 가온들찬빛 봉사활동<br>
                         03 선덕원 공부와 활동<br>
                         04 쪽방촌 어르신 봉사<br>
-                        05 쪽방촌 상담소의 만두 만들기🥟</p>
+                        05 쪽방촌 상담소의 만두 만들기</p>
 
                     <p class="mb-4">- 선한마음연합 새로운 소식 -<br>
                         하나, 선한마음연합 페이스북 페이지 개설 소식!<br>
-                        둘, 김덕영 감독님의 영화 '건국전쟁' 후원소식🎥<br>
+                        둘, 김덕영 감독님의 영화 '건국전쟁' 후원소식<br>
                         셋,  제2회 자립준비청년 박람회 'MOVE ON FAIR'에 방문하다!<br>
                         넷, 고려인 한글학교에서 즐기는 윷놀이!</p>
 
@@ -324,7 +324,7 @@
                 </div>
                                 <!-- 공백 -->
                                 <!-- <div class="col-lg-3"></div> -->
-                <div class="col-lg-12" style="text-align: center;"><p><a href="newsletter.html" style="text-decoration: underline; text-underline-position : under;"><I><h4>지난 뉴스레터 전체보기</h4></I></a></p></div>
+                <div class="col-lg-12" style="text-align: center;"><p><a href="newsletter.html" style="text-decoration: underline; text-underline-position : under; color: black !important;"><I><h5>지난 뉴스레터 전체보기</h5></I></a></p></div>
             </div>
         </div>
     </div>
