--- a/about.html
+++ b/about.html
@@ -162,20 +162,12 @@
     </div>
 
     <!-- MOU -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" style="padding-bottom: 0 !important; ">
         <div class="container">
             <div class="row g-4">
-                <h3 style="margin-bottom: var(--bs-gutter-y);"><strong style=" text-align: left;">MOU</strong></h3>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="store-item position-relative text-center">
-                        <img class="img-fluid" id="showDialogLink_baekjae" src="img/onehada_mou.png" alt="" style="height: 30vh; margin-bottom: 2vh;">
-                        <br>
-                        <strong>선한마음연합 X 원하다</strong>
-                    <p>"통일을 원하다 하나됨을 원하다" 통일 대한민국을 위해 전 세계 재외동포와 함께 통일을 준비하는 원하다와 함께 합니다.</p>
-                    </div>
-                </div>
+                <h4 style="margin-bottom: var(--bs-gutter-y); text-align: center;"><strong >MOU</strong></h4>
 
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="store-item position-relative text-center">
                         <img class="img-fluid" id="showDialogLink_baekjae" src="img/baekjae_mou.png" alt="" style="height: 30vh; margin-bottom: 2vh;">
                         <br>
@@ -184,7 +176,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="store-item position-relative text-center">
                         <img class="img-fluid" id="showDialogLink_social" src="img/social_mou.png" alt="" style="height: 30vh; margin-bottom: 2vh;">
                         <br>
@@ -194,7 +186,7 @@
                 </div>
 
 
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="store-item position-relative text-center">
                         <img class="img-fluid" id="showDialogLink_social" src="img/sindafum_mou.jpg" alt="" style="height: 30vh; margin-bottom: 2vh;">
                         <br>
@@ -209,10 +201,10 @@
 
 
     <!-- 함꼐 하는 단체들 -->
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5" style="padding-top:0 !important">
         <div class="container py-5">
-            <div class="row g-5">
-                <h3><strong style=" text-align: left;">함께 하는 단체들</strong></h3>
+            <div class="row g-5" style="margin: auto;">
+                <h4 class="mb-3" style=" text-align: center;"><strong style=" text-align: center; ">함께 하는 단체들</strong></h4>
                 <img style="width: 80%; margin: 0 auto;" src="img/withcompany.png" alt="">
             </div>
         </div>
