--- a/contact.html
+++ b/contact.html
@@ -72,45 +72,14 @@
     <!-- Navbar End -->
 
 
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container text-center py-5">
-            <h1 class="display-2 text-white mb-4 animated slideInDown">문의하기</h1>
-        </div>
-    </div>
-    <!-- Page Header End -->
-
-
     <!-- Contact Start -->
     <div class="container-xxl contact py-5">
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Goodheart Contact</p>
-                <h1 class="display-6">선한마음 연락처</h1>
+                <h1 class="display-6">선한마음 문의하기</h1>
             </div>
-            <div class="row g-5 mb-5">
-                <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="btn-square mx-auto mb-3">
-                        <i class="fa fa-envelope fa-2x text-white"></i>
-                    </div>
-                    <p class="mb-2">goodheart.manager@gmail.com</p>
-                </div>
-                <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
-                    <div class="btn-square mx-auto mb-3">
-                        <i class="fa fa-phone fa-2x text-white"></i>
-                    </div>
-                    <p class="mb-2">+82 (0)2-715-5610</p>
-                </div>
-                <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="btn-square mx-auto mb-3">
-                        <i class="fa fa-map-marker-alt fa-2x text-white"></i>
-                    </div>
-                    <p class="mb-2">서울특별시 마포구</p>
-                    <p class="mb-2">토정로37길 46</p>
-                    <p class="mb-0">정우멘션 202호</p>
-                </div>
-            </div>
-            <div class="row g-5">
+            <div class="row g-5 mt-3" style="margin-bottom:5rem !important">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h3 class="mb-4">선한마음연합에 대해 관심이 있으신가요?</h3>
                     <p class="mb-4">아래 문의를 통해 이름, 이메일, 제목, 내용을 작성하여 주시면<br> 빠른 시일 내 선한마음연합에서 답변 드리겠습니다.</p>
@@ -158,6 +127,31 @@
                             frameborder="0" style="height: 100%; min-height: 300px; border:0;" allowfullscreen=""
                             aria-hidden="false" tabindex="0"></iframe>
                     </div>
+                </div>
+            </div>
+            <div class="section-title text-center mx-auto wow fadeInUp mt-5" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h1 class="display-6">선한마음 연락처</h1>
+            </div>
+            <div class="row g-5 mb-5">
+                <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="btn-square mx-auto mb-3">
+                        <i class="fa fa-envelope fa-2x text-white"></i>
+                    </div>
+                    <p class="mb-2">goodheart.manager@gmail.com</p>
+                </div>
+                <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="btn-square mx-auto mb-3">
+                        <i class="fa fa-phone fa-2x text-white"></i>
+                    </div>
+                    <p class="mb-2">+82 (0)2-715-5610</p>
+                </div>
+                <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="btn-square mx-auto mb-3">
+                        <i class="fa fa-map-marker-alt fa-2x text-white"></i>
+                    </div>
+                    <p class="mb-2">서울특별시 마포구</p>
+                    <p class="mb-2">토정로37길 46</p>
+                    <p class="mb-0">정우멘션 202호</p>
                 </div>
             </div>
         </div>
@@ -252,7 +246,8 @@
                 xhr.onreadystatechange = function () {
                     if (xhr.readyState === 4 && xhr.status === 200) {
                         form.reset();
-                        var formElements = form.querySelector(".form-elements") if (formElements) {
+                        var formElements = form.querySelector(".form-elements") 
+                        if (formElements) {
                             formElements.style.display =
                                 "none"; // hide form                                       
                         }
