--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- </div> -->
     <!-- Carousel Start -->
-     <!-- 내려오는 네비 -->
+    <!-- 내려오는 네비 -->
     <div class="container-fluid sticky-top" id="hide_nav"
         style="display: none; background-image: linear-gradient(rgba(0, 0, 0, 0.53), rgba(0, 0, 0, 0.53)), url('img/main_header.jpg'); background-size: cover; backdrop-filter: blur(30px);">
         <div class="container">
@@ -68,11 +68,12 @@
                 <!-- <a href="index.html" style="width: 250px; height: auto">
                     <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
                 </a> -->
-                <a href="index.html" >
-                        <img class="img-fluid" id="menu-logo" src="img/logo_white.png" alt="Logo" style="width: 8vh;">
+                <a href="index.html">
+                    <img class="img-fluid" id="menu-logo" src="img/logo_white.png" alt="Logo" style="width: 8vh;">
                 </a>
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse" style="background-image: url('img/hambuger.png'); height: 3vh; background-size: cover;">
+                    data-bs-target="#navbarCollapse"
+                    style="background-image: url('img/hambuger.png'); height: 3vh; background-size: cover;">
                     <span style=""></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -95,23 +96,25 @@
             <!-- <div style="background-image: url('img/main_header.jpg'); z-index: 9999;"> -->
 
             <!-- Navbar End -->
-             <!-- 고정 네비 -->
+            <!-- 고정 네비 -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="img/main_header.jpg" alt="Image" style="height: 100vh; object-fit: cover;">
                     <div class="carousel-caption"
-                        style="background-color: rgba(0, 0, 0, 0.53); align-items: baseline; flex-direction:column">
-                        <div class="container-fluid sticky-top">
+                        style="background-color: rgba(0, 0, 0, 0.53); align-items: baseline; flex-direction:column ; ">
+                        <div class="container-fluid sticky-top" style="backdrop-filter: blur(30px); ">
                             <div class="container">
-                                <nav class="navbar navbar-expand-lg navbar py-2 py-lg-0">
+                                <nav class="navbar navbar-expand-lg navbar py-2 py-lg-0" >
                                     <!-- <a href="index.html" style="width: 250px; height: auto">
                                         <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
                                     </a> -->
                                     <!-- <a href="index.html" class="navbar-brand" style="margin-top: 15px;"> -->
-                                        <a href="index.html"><img class="img-fluid" id="menu-logo" src="img/logo_white.png" alt="Logo" style="width: 8vh;"></a>
+                                    <a href="index.html"><img class="img-fluid" id="menu-logo" src="img/logo_white.png"
+                                            alt="Logo" style="width: 8vh;"></a>
                                     <!-- </a> -->
                                     <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                                        data-bs-target="#navbarCollapse" style="background-image: url('img/hambuger.png'); height: 3vh; background-size: cover;">
+                                        data-bs-target="#navbarCollapse"
+                                        style="background-image: url('img/hambuger.png'); height: 3vh; background-size: cover;">
                                         <span style="background-image: url('img/hambuger.png');"></span>
                                     </button>
                                     <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -135,9 +138,9 @@
                                 <div class="col-lg-8 text-start">
                                     <p class="fs-3 text-white animated">사랑으로 품다</p>
                                     <h1 class="display-3 text-white mb-4 animated zoomIn">선한마음연합</h1>
-                                    <p style="margin-bottom: 30px;" class="fs-5 text-white animated">선한마음연합은 아이들을 보호하고
+                                    <p style="margin-bottom: 30px; white-space: nowrap;" class="fs-6 text-white animated">선한마음연합은 아이들을 보호하고
                                         아동 인권을 증진하여 전세계 모든 아이들이 행복한 사회를 만들기 위해 일하는 시민단체입니다.</p>
-                                    <a><a href="https://forms.gle/MV5TuS8oMbS9qsBg9" class="fs-5" target="_blank"
+                                    <a><a href="https://forms.gle/MV5TuS8oMbS9qsBg9" class="fs-6" target="_blank"
                                             style="margin-top: 30px; color: white; text-decoration: underline; text-underline-position : under;">회원가입</a>
                                 </div>
                             </div>
@@ -243,11 +246,13 @@
     <!-- Video End -->
 
 
-    <div class="container-xxl py-5" style="background-color: #F2F2F2 ; max-width: 1800px !important; padding-top: 7rem !important; padding-bottom: 7rem !important;">
+    <div class="container-xxl py-5"
+        style="background-color: #F2F2F2 ; max-width: 1800px !important; padding-top: 7rem !important; padding-bottom: 7rem !important;">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-2 wow fadeIn" data-wow-delay="0.1s" style="margin-right: 2rem;">
-                    <h1 class="home_newsletter_h1" style="text-decoration: underline; text-underline-position : under; line-height: 130%;">
+                    <h1 class="home_newsletter_h1"
+                        style="text-decoration: underline; text-underline-position : under; line-height: 130%;">
                         <strong><I>
                                 NEWS<br>
                                 LETTER,
@@ -258,7 +263,23 @@
                 </div>
                 <div class="col-lg-1"></div>
                 <!-- 1번 뉴스레터 -->
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-right: 10px; margin-top: 30vh;">
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s"
+                    style="background-color: white; padding-top: 1rem; margin-right: 10px; margin-top: 30vh;">
+                    <p class="fs-5 fw-medium fst-italic ">2024년 6월 뉴스레터&nbsp;<a href="https://stib.ee/4a8D"
+                            target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
+                    <p class="mb-4">뜨거운 햇빛이 시작되는 여름날, 여러분들의 한 달은 어떠셨나요?? 저희 선한마음연합은 이웃들과 함께 하며 열정적인 한 달을 보냈습니다. 여러분들도 우리 이웃들과 함께하는 이 열정을 함께 느끼시기를 기대하며, 이웃들을 향한 뜨거운 사랑과 관심으로 이 더위를 날려버리기를 바랍니다. 6월의 소식도 함께 해요!</p>
+                    <p class="mb-4">01 선덕원의 6월 여름나기<br>
+                        02 베이비박스 아기돌봄 봉사활동<br>
+                        03 쪽방촌 봉사활동<br>
+                        04 사랑을 나누는 소망의집 봉사활동</p>
+
+                    <p class="mb-4">- 선한마음연합 후원소식 -<br>
+                        하나, 충신다품과 MOU를 맺다!<br>
+                        둘, "김정문 설렁탕"을 통해 후원하다</p>
+                </div>
+                <!-- 2번 뉴스레터 -->
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s"
+                    style="background-color: white; padding-top: 1rem; margin-top: 30vh;">
                     <p class="fs-5 fw-medium fst-italic ">2024년 5월 뉴스레터&nbsp;<a href="https://stib.ee/m4gC"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
                     <p class="mb-4">푸르른 나무와 따뜻한 햇살이 반기는 가정의 달 5월입니다. 가족, 친구, 스승 또 우리 이웃과 함께한 5월이었습니다 선한마음연합에도
@@ -271,9 +292,13 @@
                     <p class="mb-4">- 선한마음연합 후원소식 -<br>
                         하나, 이웃에게 전하는 마음 "김정문 설렁탕"<br>
                         둘, 특별후원금 소식</p>
+
                 </div>
-                <!-- 2번 뉴스레터 -->
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 30vh;">
+                <!-- 공백 -->
+                <div class="col-lg-3" style="margin-right: 2rem;"></div>
+                <!-- 3번 뉴스레터 -->
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s"
+                    style="background-color: white; padding-top: 1rem; margin-top: 10px; margin-right: 10px;">
                     <p class="fs-5 fw-medium fst-italic ">2024년 4월 뉴스레터&nbsp;<a href="https://stib.ee/lpDC"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
@@ -282,16 +307,15 @@
                     <p class="mb-4">01 베이비박스 아기돌봄 봉사<br>
                         02 선한마음 X 에다러브 소망의집 봉사<br>
                         03 선덕원 공부와 활동</p>
-
                 </div>
-                <!-- 공백 -->
-                <div class="col-lg-3" style="margin-right: 2rem;"></div>
-                <!-- 3번 뉴스레터 -->
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px; margin-right: 10px;">
+                <!-- 4번 뉴스레터 -->
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s"
+                    style="background-color: white; padding-top: 1rem; margin-top: 10px;">
                     <p class="fs-5 fw-medium fst-italic ">2024년 3월 뉴스레터&nbsp;<a href="https://stib.ee/eKzB"
                             target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
 
-                    <p class="mb-4">봄과 함께 선한마음연합의 9번째 뉴스레터가 도착했습니다! 살랑살랑 봄바람에 설레는 마음인데요! 그 마음이 지속되도록 우리 이웃들의 설레는 소식 함께하실까요~?</p>
+                    <p class="mb-4">봄과 함께 선한마음연합의 9번째 뉴스레터가 도착했습니다! 살랑살랑 봄바람에 설레는 마음인데요! 그 마음이 지속되도록 우리 이웃들의 설레는 소식
+                        함께하실까요~?</p>
 
                     <p class="mb-4">01 베이비박스 아기돌봄 봉사<br>
                         02 다품 곁부축이팀과 함께 쪽방촌에 전하는 사랑<br>
@@ -300,31 +324,16 @@
                     <p class="mb-4">- 선한마음연합 후원소식 -<br>
                         하나, 농업회사법인 (주)백제 & 김정문 설렁탕 후원소식<br>
                         둘, 특별후원금 소식</p>
-                </div>
-                <!-- 4번 뉴스레터 -->
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s" style="background-color: white; padding-top: 1rem; margin-top: 10px;">
-                    <p class="fs-5 fw-medium fst-italic ">2024년 2월 뉴스레터&nbsp;<a href="https://stib.ee/cKzB"
-                            target="_blank"><img style="width:5%" src="img/arrow.png"></a></p>
-
-                    <p class="mb-4">안녕하세요! 선한마음연합의 8번째 뉴스레터가 도착했습니다. 여러분의 이웃을 향한 지속적인 사랑에 늘 감사드립니다. 그럼 기다리시던 선한마음의 소식 보러 가실까요? </p>
-
-                    <p class="mb-4">01 선한마음연합X에다러브 소망의 집 봉사<br>
-                        02 가온들찬빛 봉사활동<br>
-                        03 선덕원 공부와 활동<br>
-                        04 쪽방촌 어르신 봉사<br>
-                        05 쪽방촌 상담소의 만두 만들기</p>
-
-                    <p class="mb-4">- 선한마음연합 새로운 소식 -<br>
-                        하나, 선한마음연합 페이스북 페이지 개설 소식!<br>
-                        둘, 김덕영 감독님의 영화 '건국전쟁' 후원소식<br>
-                        셋,  제2회 자립준비청년 박람회 'MOVE ON FAIR'에 방문하다!<br>
-                        넷, 고려인 한글학교에서 즐기는 윷놀이!</p>
-
 
                 </div>
-                                <!-- 공백 -->
-                                <!-- <div class="col-lg-3"></div> -->
-                <div class="col-lg-12" style="text-align: center;"><p><a href="newsletter.html" style="text-decoration: underline; text-underline-position : under; color: black !important;"><I><h5>지난 뉴스레터 전체보기</h5></I></a></p></div>
+                <!-- 공백 -->
+                <!-- <div class="col-lg-3"></div> -->
+                <div class="col-lg-12" style="text-align: center;">
+                    <p><a href="newsletter.html"
+                            style="text-decoration: underline; text-underline-position : under; color: black !important;"><I>
+                                <h5>지난 뉴스레터 전체보기</h5>
+                            </I></a></p>
+                </div>
             </div>
         </div>
     </div>
