--- a/volunteer.html
+++ b/volunteer.html
@@ -41,7 +41,7 @@
             /* 세로 방향 중앙 정렬 */
             width: 60%;
             background-color: #ffffff;
-            border: 2px solid #333333;
+            border: 2px solid #ffffff;
             border-radius: 10px;
             overflow: hidden;
             margin: auto;
@@ -55,7 +55,7 @@
             text-align: center;
             cursor: pointer;
             background-color: #eeeeee;
-            border-right: 2px solid #333333;
+            border-right: 2px solid #ffffff;
             transition: background-color 0.3s ease;
         }
 
@@ -140,9 +140,8 @@
         <div class="container">
             <div class="tab-container">
                 <div class="tab"><a href="news.html">선한마음소식</a></div>
-                <div class="tab-active"><a href="volunteer.html">봉사활동</a></div>
-                <div class="tab"><a href="forum.html">포럼&컨퍼런스</a></div>
-                <div class="tab"><a href="education.html">교육행사</a></div>
+                <div class="tab-active"><a href="volunteer.html"></a>봉사활동</div>
+                <div class="tab"><a href="forum.html"></a>교육&#183;행사</div>
             </div>
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Online Store</p>
