--- a/newsletter.html
+++ b/newsletter.html
@@ -69,9 +69,9 @@
             /* Adjust this height for more or less content */
         }
 
-        .nav-scroll {
+        /* .nav-scroll {
             overflow: hidden;
-        }
+        } */
 
         .footer {
             width: 100%;
